crates/capsec-tests/tests/compile_fail/sealed_impl_from_outside.stderr
error[E0277]: the trait bound `EvilPerm: capsec_core::permission::sealed::Sealed` is not satisfied
  --> tests/compile_fail/sealed_impl_from_outside.rs:14:21
   |
14 | impl Permission for EvilPerm {}
   |                     ^^^^^^^^ unsatisfied trait bound
   |
help: the trait `capsec_core::permission::sealed::Sealed` is not implemented for `EvilPerm`
  --> tests/compile_fail/sealed_impl_from_outside.rs:13:1
   |
13 | struct EvilPerm;
   | ^^^^^^^^^^^^^^^
   = help: the following other types implement trait `capsec_core::permission::sealed::Sealed`:
             (A, B)
             Ambient
             EnvRead
             EnvWrite
             FsAll
             FsRead
             FsWrite
             NetAll
           and $N others
note: required by a bound in `capsec::Permission`
  --> $WORKSPACE/crates/capsec-core/src/permission.rs
   |
   | pub trait Permission: sealed::Sealed + 'static {}
   |                       ^^^^^^^^^^^^^^ required by this bound in `Permission`
   = note: `Permission` is a "sealed trait", because to implement it you also need to implement `capsec_core::permission::sealed::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following types implement the trait:
             capsec::FsRead
             capsec::FsWrite
             capsec::FsAll
             capsec::NetConnect
             capsec::NetBind
             capsec::NetAll
             capsec::EnvRead
             capsec::EnvWrite
           and $N others
